--- a/src/app/shared/color-card/color-card.component.scss
+++ b/src/app/shared/color-card/color-card.component.scss
@@ -1,5 +1,6 @@
 .card{
-    min-height: 185px;
+    min-height: 175px;
+    max-height: 175px;
     display: flex;
     justify-content: center;
     align-items: center;
