--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="home-container">
-    <div class="title-container">
+    <div class="title-container" #title>
         <h1>COLORES</h1>
     </div>
     <div class="row">
-        <ng-container>
-            <div class="card-container" *ngFor="let color of colors | paginate: { id: 'server', itemsPerPage: colorList.per_page, currentPage: colorList.page, totalItems: colorList.total }">
+        <ng-container *ngIf="colors.length > 0">
+            <div class="card-container" *ngFor="let color of colors | paginate: { id: 'server', itemsPerPage: colorList.per_page, currentPage: colorList.page, totalItems: colorList.total }" (click)="passColorToPalette(color)">
                 <div class="col m4">
                     <app-color-card [color]="color"></app-color-card>
     
@@ -14,7 +14,7 @@
         
 
     </div>
-    <div>
+    <div class="pagination-container">
         <pagination-controls class="pagination-colors" (pageChange)="getColors($event)" id="server"></pagination-controls>
 
     </div>
