se agrega vista para el tester

--- a/src/app/components/tester/tester.component.html
+++ b/src/app/components/tester/tester.component.html
@@ -1,1 +1,35 @@
-<p>tester works!</p>
+<div class="tester-container">
+    <div class="window-container">
+        <div class="row">
+            <a class="col md2 offset-m10" routerLink="" routerLinkActive="active"><i class="material-icons">arrow_back</i></a>
+            <div class="col s12 m6 offset-m3">
+                <div class="card darken-1 z-depth-5">
+                    <div class="card-action">
+                        <span class="one"></span>
+                        <span class="two"></span>
+                        <span class="three"></span>
+                        <div class="circles-container">
+                        </div>
+
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title">¡Soy el Tester!</span>
+                        <div class="sections-container">
+                            <div class="rectangle-container" [ngStyle]="{'background-color': primaryColor}"></div>
+                            <div class="list-container">
+                                <ul>
+                                    <li><span class="circle-li" [ngStyle]="{'background-color': secundaryColor}"></span><span class="line-li"><img src="../../../assets/imgs/path106-2.png" alt=""></span></li>
+                                    <li><span class="circle-li" [ngStyle]="{'background-color': secundaryColor}"></span><span class="line-li"><img src="../../../assets/imgs/path106-2.png" alt=""></span></li>
+                                    <li><span class="circle-li" [ngStyle]="{'background-color': secundaryColor}"></span><span class="line-li"><img src="../../../assets/imgs/path106-2.png" alt=""></span></li>
+                                    <li><span class="circle-li" [ngStyle]="{'background-color': secundaryColor}"></span><span class="line-li"><img src="../../../assets/imgs/path106-2.png" alt=""></span></li>
+   
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+                           
+    </div>
+</div>
